swagger code for order functions  added in swagger.js,orderController.js
