# swagger-output.json
@@ -7,11 +7,15 @@
   },
   "host": "localhost:8000",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": [
+    "http"
+  ],
   "paths": {
     "/api/v1/auth/register": {
       "post": {
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "parameters": [
           {
@@ -45,7 +49,9 @@
     },
     "/api/v1/auth/login": {
       "post": {
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "parameters": [
           {
@@ -73,7 +79,9 @@
     },
     "/api/v1/auth/logout": {
       "post": {
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -84,7 +92,9 @@
     },
     "/api/v1/users/": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Fetch all registered users in a database whose role is user (exclude admins)",
         "description": "**ROLE REQUIRED:** admin",
         "responses": {
@@ -110,7 +120,9 @@
     },
     "/api/v1/users/showMe": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Returns information about the requesting user based on cookie session",
         "description": "",
         "responses": {
@@ -136,7 +148,9 @@
     },
     "/api/v1/users/showMe/withAlbums": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Fetch a user by id and all albums they purchased.",
         "description": "",
         "responses": {
@@ -166,7 +180,9 @@
     },
     "/api/v1/users/updateCurrentUser": {
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Fetch the requesting user, update their data and return the updated user.",
         "description": "",
         "parameters": [
@@ -209,7 +225,9 @@
     },
     "/api/v1/users/updateUserPasssword": {
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Fetch the current requesting user by id, update their password and save it to the database.",
         "description": "",
         "parameters": [
@@ -256,7 +274,9 @@
     },
     "/api/v1/users/{id}": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Fetch a user by id",
         "description": "",
         "parameters": [
@@ -292,7 +312,9 @@
         }
       },
       "delete": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Fetch a user by id and delete user.",
         "description": "**ROLE REQUIRED:** admin",
         "parameters": [
@@ -315,7 +337,9 @@
     },
     "/api/v1/albums/": {
       "get": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -324,7 +348,9 @@
         }
       },
       "post": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "parameters": [
           {
@@ -347,7 +373,9 @@
         }
       },
       "patch": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "parameters": [
           {
@@ -372,7 +400,9 @@
     },
     "/api/v1/albums/filter": {
       "get": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "parameters": [
           {
@@ -410,7 +440,9 @@
     },
     "/api/v1/albums/{id}": {
       "get": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "parameters": [
           {
@@ -427,7 +459,9 @@
         }
       },
       "patch": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "parameters": [
           {
@@ -446,7 +480,9 @@
     },
     "/api/v1/albums/{id}/listOfUsersWhoPurchasedThisAlbum": {
       "get": {
-        "tags": ["Albums"],
+        "tags": [
+          "Albums"
+        ],
         "description": "",
         "parameters": [
           {
@@ -465,20 +501,24 @@
     },
     "/api/v1/orders/": {
       "get": {
-        "tags": ["Orders"],
+        "tags": [
+          "Orders"
+        ],
         "summary": "Fetch all orders in a database",
-        "description": "**ROLE REQUIRED:** user",
+        "description": "**ROLE REQUIRED:** admin",
         "responses": {
           "200": {
             "description": "Orders successfully fetched.",
             "schema": {
-              "$ref": "#/definitions/Oder"
+              "$ref": "#/definitions/OrderList"
             }
           }
         }
       },
       "post": {
-        "tags": ["Orders"],
+        "tags": [
+          "Orders"
+        ],
         "summary": "Create a new order and process payment",
         "description": "Creates a new order and processes payment using Stripe.",
         "parameters": [
@@ -488,106 +528,7 @@
             "description": "Order information including order items, subtotal, tax, and total",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "object"
-                },
-                "properties": {
-                  "type": "object",
-                  "properties": {
-                    "orderItems": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "array"
-                        },
-                        "items": {
-                          "type": "object",
-                          "properties": {
-                            "type": {
-                              "type": "string",
-                              "example": "object"
-                            },
-                            "properties": {
-                              "type": "object",
-                              "properties": {
-                                "album": {
-                                  "type": "object",
-                                  "properties": {
-                                    "type": {
-                                      "type": "string",
-                                      "example": "string"
-                                    },
-                                    "description": {
-                                      "type": "string",
-                                      "example": "ID of the album"
-                                    }
-                                  }
-                                },
-                                "quantity": {
-                                  "type": "object",
-                                  "properties": {
-                                    "type": {
-                                      "type": "string",
-                                      "example": "integer"
-                                    },
-                                    "description": {
-                                      "type": "string",
-                                      "example": "Quantity of the album"
-                                    }
-                                  }
-                                }
-                              }
-                            }
-                          }
-                        }
-                      }
-                    },
-                    "subtotal": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "number"
-                        },
-                        "description": {
-                          "type": "string",
-                          "example": "Subtotal amount"
-                        }
-                      }
-                    },
-                    "tax": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "number"
-                        },
-                        "description": {
-                          "type": "string",
-                          "example": "Tax amount"
-                        }
-                      }
-                    },
-                    "total": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "number"
-                        },
-                        "description": {
-                          "type": "string",
-                          "example": "Total amount"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
+              "$ref": "#/definitions/Order"
             }
           }
         ],
@@ -603,7 +544,9 @@
     },
     "/api/v1/orders/{id}": {
       "get": {
-        "tags": ["Orders"],
+        "tags": [
+          "Orders"
+        ],
         "summary": "Fetch an order by id",
         "description": "",
         "parameters": [
@@ -619,15 +562,7 @@
           "200": {
             "description": "Order successfully fetched.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "order": {
-                  "$ref": "#/definitions/Order"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/Order"
             }
           },
           "404": {
@@ -636,7 +571,9 @@
         }
       },
       "delete": {
-        "tags": ["Orders"],
+        "tags": [
+          "Orders"
+        ],
         "summary": "Delete an order by id",
         "description": "**ROLE REQUIRED:** user",
         "parameters": [
@@ -660,7 +597,9 @@
     },
     "/api/v1/reviews/": {
       "get": {
-        "tags": ["Reviews"],
+        "tags": [
+          "Reviews"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -671,7 +610,9 @@
     },
     "/api/v1/reviews/album/{albumId}": {
       "get": {
-        "tags": ["Reviews"],
+        "tags": [
+          "Reviews"
+        ],
         "description": "",
         "parameters": [
           {
@@ -688,7 +629,9 @@
         }
       },
       "post": {
-        "tags": ["Reviews"],
+        "tags": [
+          "Reviews"
+        ],
         "description": "",
         "parameters": [
           {
@@ -722,7 +665,9 @@
     },
     "/api/v1/reviews/{id}": {
       "get": {
-        "tags": ["Reviews"],
+        "tags": [
+          "Reviews"
+        ],
         "description": "",
         "parameters": [
           {
@@ -739,7 +684,9 @@
         }
       },
       "delete": {
-        "tags": ["Reviews"],
+        "tags": [
+          "Reviews"
+        ],
         "description": "",
         "parameters": [
           {
@@ -756,7 +703,9 @@
         }
       },
       "patch": {
-        "tags": ["Reviews"],
+        "tags": [
+          "Reviews"
+        ],
         "description": "",
         "parameters": [
           {
@@ -793,7 +742,9 @@
     },
     "/api/v1/wishlist/": {
       "post": {
-        "tags": ["Wishlist"],
+        "tags": [
+          "Wishlist"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -804,7 +755,9 @@
     },
     "/api/v1/wishlist/{wishlist_id}/add_album/{album_id}": {
       "patch": {
-        "tags": ["Wishlist"],
+        "tags": [
+          "Wishlist"
+        ],
         "description": "",
         "parameters": [
           {
@@ -835,7 +788,9 @@
     },
     "/api/v1/wishlist/{wishlist_id}/remove_album/{album_id}": {
       "patch": {
-        "tags": ["Wishlist"],
+        "tags": [
+          "Wishlist"
+        ],
         "description": "",
         "parameters": [
           {
@@ -907,7 +862,10 @@
         },
         "role": {
           "type": "string",
-          "enum": ["user", "admin"]
+          "enum": [
+            "user",
+            "admin"
+          ]
         },
         "profileImage": {
           "type": "object",
@@ -931,12 +889,127 @@
             },
             "preferredPaymentOption": {
               "type": "string",
-              "enum": ["credit card", "paypal", "google pay"]
+              "enum": [
+                "credit card",
+                "paypal",
+                "google pay"
+              ]
             }
           }
         }
       },
-      "required": ["id", "name", "username", "email", "role"]
+      "required": [
+        "id",
+        "name",
+        "username",
+        "email",
+        "role"
+      ]
+    },
+    "definitions": {
+      "type": "object",
+      "properties": {
+        "Order": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "example": "123456"
+            },
+            "user": {
+              "type": "string",
+              "example": "John Doe"
+            },
+            "orderItems": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "album": {
+                    "type": "string",
+                    "example": "5f7f1f7a5c3f2b2d9c1b0b9d"
+                  },
+                  "quantity": {
+                    "type": "number",
+                    "example": 2
+                  }
+                }
+              }
+            },
+            "subtotal": {
+              "type": "number",
+              "example": 9.99
+            },
+            "tax": {
+              "type": "number",
+              "example": 0.75
+            },
+            "total": {
+              "type": "number",
+              "example": 10.74
+            }
+          },
+          "required": [
+            "id"
+          ]
+        }
+      }
+    },
+    "OrderList": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "789012"
+        },
+        "orders": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "user": {
+                "type": "string",
+                "example": "Bob Johnson"
+              },
+              "orderItems": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "album": {
+                      "type": "string",
+                      "example": "5f7f1f7a5c3f2b2d9c1b0b9e"
+                    },
+                    "quantity": {
+                      "type": "number",
+                      "example": 3
+                    }
+                  }
+                }
+              },
+              "subtotal": {
+                "type": "number",
+                "example": 29.97
+              },
+              "tax": {
+                "type": "number",
+                "example": 2.5
+              },
+              "total": {
+                "type": "number",
+                "example": 32.47
+              }
+            }
+          }
+        },
+        "count": {
+          "type": "number",
+          "example": 2
+        }
+      },
+      "required": [
+        "id"
+      ]
     },
     "UserWithAlbums": {
       "type": "object",
@@ -959,7 +1032,10 @@
         },
         "role": {
           "type": "string",
-          "enum": ["user", "admin"]
+          "enum": [
+            "user",
+            "admin"
+          ]
         },
         "profileImage": {
           "type": "object",
@@ -983,7 +1059,11 @@
             },
             "preferredPaymentOption": {
               "type": "string",
-              "enum": ["credit card", "paypal", "google pay"]
+              "enum": [
+                "credit card",
+                "paypal",
+                "google pay"
+              ]
             }
           }
         },
@@ -1058,11 +1138,22 @@
                 ]
               }
             },
-            "required": ["_id", "user", "album"]
+            "required": [
+              "_id",
+              "user",
+              "album"
+            ]
           }
         }
       },
-      "required": ["id", "name", "username", "email", "role", "purchasedAlbums"]
+      "required": [
+        "id",
+        "name",
+        "username",
+        "email",
+        "role",
+        "purchasedAlbums"
+      ]
     }
   }
 }
